# GCS-hikari

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: desktop-release.yml
cli/commands/: sitl.ts
convex/: cmdDroneStatus.ts  cmdFlightLogs.ts  cmdPairing.ts  cmdPlugins.ts  cmdRadioPairing.ts  cmdSigningKeys.ts  http.ts  schema.ts
convex/_generated/: api.d.ts
electron/: main.ts  server.ts  window.ts
locales/: de.json  en.json  es.json  fr.json  gu.json  hi.json  id.json  ja.json  kn.json  ko.json  mr.json  pa.json  pt.json  ta.json  te.json  zh.json
src/app/: globals.css  layout.tsx  page.tsx
src/hooks/: use-discovered-agents.ts  use-fleet-nodes.ts  use-visible-tabs.ts
src/lib/: community-api-drones.ts  community-api.ts  detect-tauri.ts  hud-draw.ts  map-constants.ts  usb-device-manager.ts
src/mock/: drones.ts  flight-paths.ts  scenarios.ts
src/stores/: agent-capabilities-store.ts  browser-identity-store.ts  local-nodes-store.ts  pairing-store.ts  settings-store-types.ts  settings-store.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
tauri/src-tauri/src/commands/: mdns.rs  mod.rs
tests/component/: DroneRadioPanel.test.tsx  RadioPanel.test.tsx  drone-card.test.tsx
tests/contract/: agent-version-contract.test.ts
tests/convex/: cmdDroneStatus.test.ts
tests/fixtures/: ados-agent-manifest.fixture.json
tests/plugins/: slot-orchestrator.test.tsx
tests/unit/: local-pair-client.test.ts  (+4 more)
(+138 files in other folders)
